--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "make:migration": "knex migrate:make",
     "build": "run-s clean lint:fix transpile",
     "load:fake": "NODE_ENV=test ts-node scripts/fake-loader",
+    "create:schema": "ts-node src/database/schemas",
     "test": "jest --config jest.json",
     "lint": "tslint src/**/*.{ts,js} test/**/*.{ts,js}",
     "lint:fix": "tslint --fix src/**/*.{ts,js} test/**/*.{ts,js}",
@@ -54,9 +55,9 @@
     "typescript"
   ],
   "dependencies": {
+    "@google-cloud/spanner": "^1.4.1",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
-    "bookshelf": "^0.13.3",
     "bookshelf-camelcase": "^2.0.1",
     "chalk": "^2.3.0",
     "cors": "^2.8.4",
@@ -66,7 +67,6 @@
     "http-status-codes": "^1.3.0",
     "joi": "^13.1.2",
     "jsonwebtoken": "^8.2.1",
-    "knex": "0.14",
     "morgan": "^1.9.0",
     "pg": "^7.4.1",
     "winston": "^2.4.0",
@@ -74,7 +74,6 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^2.0.0",
-    "@types/bookshelf": "^0.9.7",
     "@types/cors": "^2.8.3",
     "@types/dotenv": "^4.0.2",
     "@types/express": "^4.11.1",
@@ -83,7 +82,6 @@
     "@types/jest": "^22.2.3",
     "@types/joi": "^13.0.5",
     "@types/jsonwebtoken": "^7.2.7",
-    "@types/knex": "^0.14.4",
     "@types/morgan": "^1.7.35",
     "@types/supertest": "^2.0.4",
     "@types/winston": "^2.3.7",
