Add spanner configuration

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,11 @@ LOGGING_LEVEL=debug
 TEST_APP_PORT=8080
 TEST_DB_NAME=app_test
 
+# Spanner
+SPANNER_PROJECT_ID=
+SPANNER_INSTANCE_ID=
+SPANNER_DATABASE_ID=
+
 # Authentication
 ACCESS_TOKEN_DURATION=10m
 REFRESH_TOKEN_DURATION=24h
