Add update and drop schema script

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "make:migration": "knex migrate:make",
     "build": "run-s clean lint:fix transpile",
     "load:fake": "NODE_ENV=test ts-node scripts/fake-loader",
-    "create:schema": "ts-node src/database/schemas",
+    "drop:schema": "ts-node scripts/rollback",
+    "update:schema": "ts-node scripts/schema",
     "test": "jest --config jest.json",
     "lint": "tslint src/**/*.{ts,js} test/**/*.{ts,js}",
     "lint:fix": "tslint --fix src/**/*.{ts,js} test/**/*.{ts,js}",
