Add uuid dependency

--- a/package.json
+++ b/package.json
@@ -22,15 +22,11 @@
     "prepush": "yarn build",
     "precommit": "lint-staged",
     "transpile": "backpack build",
-    "seed": "knex seed:run",
-    "migrate": "knex migrate:latest",
-    "rollback": "knex migrate:rollback",
-    "make:seeder": "knex seed:make",
-    "make:migration": "knex migrate:make",
     "build": "run-s clean lint:fix transpile",
     "load:fake": "NODE_ENV=test ts-node scripts/fake-loader",
-    "drop:schema": "ts-node scripts/rollback",
-    "update:schema": "ts-node scripts/schema",
+    "sync:data": "ts-node scripts/sync-data",
+    "drop:schema": "ts-node scripts/drop-schema",
+    "update:schema": "ts-node scripts/update-schema",
     "test": "jest --config jest.json",
     "lint": "tslint src/**/*.{ts,js} test/**/*.{ts,js}",
     "lint:fix": "tslint --fix src/**/*.{ts,js} test/**/*.{ts,js}",
@@ -70,6 +66,7 @@
     "jsonwebtoken": "^8.2.1",
     "morgan": "^1.9.0",
     "pg": "^7.4.1",
+    "uuid": "^3.2.1",
     "winston": "^2.4.0",
     "winston-daily-rotate-file": "^3.1.3"
   },
@@ -85,6 +82,7 @@
     "@types/jsonwebtoken": "^7.2.7",
     "@types/morgan": "^1.7.35",
     "@types/supertest": "^2.0.4",
+    "@types/uuid": "^3.4.3",
     "@types/winston": "^2.3.7",
     "backpack-core": "^0.7.0",
     "faker": "^4.1.0",
