--- a/package.json
+++ b/package.json
@@ -29,17 +29,15 @@
     "update:schema": "ts-node scripts/update-schema",
     "test": "jest --config jest.json",
     "lint": "tslint src/**/*.{ts} test/**/*.{ts}",
-    "lint:fix": "tslint --fix src/**/*.{ts} test/**/*.{ts}",
+    "lint:fix": "tslint --fix src/**/*.{ts} test/**/*.{ts} scripts/*.{ts}",
     "prettify": "prettier --single-quote --parser typescript --print-width 120 --write scripts/*.ts src/**/*.{ts} test/**/*.{ts}"
   },
   "lint-staged": {
-    "linters": {
-      "*.{ts, js}": [
-        "tslint --fix src/**/*.{ts} test/**/*.{ts}",
-        "prettier --single-quote --parser typescript --print-width 120 --write scripts/*.ts src/**/*.{ts} test/**/*.{ts}",
-        "git add"
-      ]
-    }
+    "*.ts": [
+      "tslint --fix src/**/*.{ts} test/**/*.{ts} scripts/*.{ts}",
+      "prettier --single-quote --parser typescript --print-width 120 --write scripts/*.ts src/**/*.{ts} test/**/*.{ts}",
+      "git add"
+    ]
   },
   "private": true,
   "license": "MIT",
