--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "bookshelf-camelcase": "^2.0.1",
     "chalk": "^2.3.0",
     "cors": "^2.8.4",
+    "date-fns": "^1.29.0",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "helmet": "^3.10.0",
@@ -71,6 +72,7 @@
   "devDependencies": {
     "@types/bcrypt": "^2.0.0",
     "@types/cors": "^2.8.3",
+    "@types/date-fns": "^2.6.0",
     "@types/dotenv": "^4.0.2",
     "@types/express": "^4.11.1",
     "@types/faker": "^4.1.2",
