--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "joi": "^13.1.2",
     "jsonwebtoken": "^8.2.1",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.6.4",
     "pg": "^7.4.1",
     "uuid": "^3.2.1",
     "winston": "^2.4.0",
@@ -81,6 +82,7 @@
     "@types/joi": "^13.0.5",
     "@types/jsonwebtoken": "^7.2.7",
     "@types/morgan": "^1.7.35",
+    "@types/nodemailer": "^4.6.0",
     "@types/supertest": "^2.0.4",
     "@types/uuid": "^3.4.3",
     "@types/winston": "^2.3.7",
