Add configuration and util function for mail

--- a/.env.docker
+++ b/.env.docker
@@ -24,3 +24,9 @@ ACCESS_TOKEN_DURATION=10m
 REFRESH_TOKEN_DURATION=24h
 ACCESS_TOKEN_SECRET_KEY=<ACCESS_TOKEN_SECRET_KEY>
 REFRESH_TOKEN_SECRET_KEY=REFRESH_TOKEN_SECRET_KEY>
+
+# Mail
+MAIL_PORT=2525
+MAIL_HOST=smtp.mailtrap.io
+MAIL_SMTP_USERNAME=
+MAIL_SMTP_PASSWORD=
